--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ body {
 input {
   min-height: auto!important;
   padding-top: 10px 4px!important;
+  padding-inline-start: 5px;
   height: 40px;
   width: 100% !important;
   transition: all .1s linear!important;
@@ -274,9 +275,11 @@ table>:not(caption)>*>* {
 
 .nav-pills .nav-link.active,
 .nav-pills .show>.nav-link {
-  background: #2e9895;
+  /* background: #2e9895; */
   box-shadow: none;
-  width: 90%;
+  box-sizing: border-box;
+  /* width: 90%; */
+  color: white;
 }
 
 .shadow {
